# Screen_data

./: .env.example  README.md  SPEC.md  debug_rows.xlsx  export.py  gpt_parser.py  main.py  ocr.py  pyproject.toml  start.bat  utils.py
scripts/: connect-server.cmd  connect-server.ps1  ssh-config.example  test_openai_connection.py
