[project]
name = "dsdata"
version = "0.1.0"
description = ""
authors = [
    {name = "Jon X",email = "89638552102es@gamil.com"}
]
requires-python = ">=3.12,<3.13"
dependencies = [
    "paddleocr (>=3.4.0,<4.0.0)",
    "pandas (>=3.0.1,<4.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "openai (>=2.29.0,<3.0.0)"
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
